--- a/views/artist.hbs
+++ b/views/artist.hbs
@@ -68,7 +68,6 @@
   </div> --}}
   <div class="feed">
     {{#instagram}}
-    {{#if shortcode}}
     <div class="feed__item feed__item--instagram">
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/{{shortcode}}/"
         data-instgrm-version="12">
@@ -157,24 +156,20 @@
         </div>
       </blockquote>
     </div>
-    {{/if}}
     {{/instagram}}
     {{#twitter}}
-    {{#if shortcode}}
     <div class="feed__item feed__item--twitter">
       <blockquote class="twitter-tweet" data-lang="nl">
         <p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/TWEET?src=hash">#TWEET</a> is loading.</p>&mdash;
         @{{username}} <a href="https://twitter.com/{{username}}/status/{{shortcode}}">{{creation_date}}</a>
       </blockquote>
     </div>
-    {{/if}}
     {{/twitter}}
     {{!-- <div class="feed__item feed__item--facebook">
       <div class="fb-post"
         data-href="https://www.facebook.com/beyonce/photos/a.252225550600/10161884777280601/?type=3&theater"></div>
     </div> --}}
     {{#youtube}}
-    {{#if shortcode}}
     <div class="feed__item feed__item--youtube">
       <div class="article__logo">
         <img class="article__logo--image" src="/images/youtube-logo.png" alt="Youtube Logo">
@@ -184,10 +179,8 @@
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-    {{/if}}
     {{/youtube}}
     {{#thenewyorktimes}}
-    {{#if thenewyorktimes_url}}
     <div class="feed__item feed__item--newyorktimes">
       <div class="article__logo">
         <img class="article__logo--image" src="/images/tnyt-logo.png" alt="{{source}}">
@@ -201,7 +194,6 @@
         <a href="{{thenewyorktimes_url}}" class="article__link" target="_blank">Continue reading</a>
       </div>
     </div>
-    {{/if}}
     {{/thenewyorktimes}}
     {{#ticketmaster}}
     {{#if ticketmaster_url}}
@@ -252,6 +244,20 @@
     {{/googlenews}}
   </div>
 </main>
+
+{{#playback}}
+<div class="spotify">
+  <img class="spotify__image" src="{{item.album.images.2.url}}" alt="{{item.name}}">
+  <div class="spotify__song">
+    <span class="spotify__artist">{{item.artists.0.name}}</span>
+    &#183;
+    <span class="spotify__track">{{item.name}}</span>
+  </div>
+  <div class="spotify__remote">
+    &#9654;
+  </div>
+</div>
+{{/playback}}
 
 {{#section 'script'}}
 <div id="fb-root"></div>
