--- a/views/artist.hbs
+++ b/views/artist.hbs
@@ -263,7 +263,7 @@
 <div id="fb-root"></div>
 <script src="/js/swiper.min.js"></script>
 <script src="/js/fitty.min.js"></script>
-<script async src="//www.instagram.com/embed.js"></script>
+<script async src="https://www.instagram.com/static/bundles/es6/EmbedSDK.js/47c7ec92d91e.js"></script>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script async defer crossorigin="anonymous"
   src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=561819877300981&autoLogAppEvents=1"></script>
