--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -59,7 +59,6 @@ $ticketmaster: #009CDE;
 
 $font-family: "Founders Grotesk", sans-serif;
 
-
 /* Style */
 $border-radius: 10px;
 $rounded: 50%;
@@ -163,16 +162,16 @@ small {
   // background-image: $header-gradient;
   padding: 3em 0 3em 0;
   color: $white;
-}
 
-.header__title {
-  display: block;
-  margin-bottom: 1em;
-  padding: 0 1em;
-  color: $white;
-  text-align: center;
-  font-weight: 500;
-  font-size: 1.25rem;
+  &__title {
+    display: block;
+    margin-bottom: 1em;
+    padding: 0 1em;
+    color: $white;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.25rem;
+  }
 }
 
 .navigation {
@@ -184,16 +183,16 @@ small {
   width: 100%;
   height: 57px;
   background-color: $black-light;
-}
 
-.navigation nav {
-  display: flex;
-}
+  nav {
+    display: flex;
+  }
 
-.navigation__tab {
-  flex: 1;
-  height: 100%;
-  line-height: 68px;
+  &__tab {
+    flex: 1;
+    height: 100%;
+    line-height: 68px;
+  }
 }
 
 .container--center {
@@ -217,20 +216,20 @@ small {
   cursor: pointer;
   transition: 0.3s;
   text-decoration: none;
-}
 
-.button--spotify {
-  background-color: $green;
-  color: $white;
-  font-weight: bold;
-  text-transform: uppercase;
-  display: inline-block;
-  margin: auto;
-}
+  &--spotify {
+    background-color: $green;
+    color: $white;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: inline-block;
+    margin: auto;
 
-.button--spotify:hover {
-  background-color: $green-dark;
-  text-decoration: none;
+    &:hover {
+      background-color: $green-dark;
+      text-decoration: none;
+    }
+  }
 }
 
 /********************************
@@ -247,183 +246,197 @@ small {
   -ms-overflow-style: none;
   scrollbar-width: none;
 
+  &__link {
+    margin-right: 0.7em;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 86px;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  &__image {
+    height: 86px;
+    width: 86px;
+    object-fit: cover;
+    border-radius: $rounded;
+  }
+
+  &__name {
+    color: $white;
+    margin-top: 0.45em;
+    text-align: center;
+    font-size: 0.875em;
+  }
+
+  &__none {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+  }
+
+  &__search {
+    border-radius: $rounded;
+    background-color: $gray-dark;
+    height: 86px;
+    width: 86px;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__add {
+    height: 22px;
+    align-self: center;
+  }
+
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
-.following__link,
-.related__link {
-  margin-right: 0.7em;
-  flex: 0 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 86px;
+.following__image {border: 2px solid $purple}
+.related__image {border: 2px solid transparent}
 
-  &:hover {
-    text-decoration: none;
+.feed__header {
+  &--wrapper {
+    display: flex;
+    align-items: center;
+    padding: 0 1em;
   }
-}
 
-.related__image,
-.following__image {
-  height: 86px;
-  width: 86px;
-  object-fit: cover;
-  border-radius: $rounded;
-}
+  &--title {color: $white;}
 
-.following__image {
-  border: 2px solid $purple;
-}
-
-.related__image {
-  border: 2px solid transparent;
-}
-
-.following__name,
-.related__name {
-  color: $white;
-  margin-top: 0.45em;
-  text-align: center;
-  font-size: 0.875em;
-}
-
-.following__none {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin: auto;
-}
-
-.following__search {
-  border-radius: $rounded;
-  background-color: $gray-dark;
-  height: 86px;
-  width: 86px;
-  display: flex;
-  justify-content: center;
-
-  .following__add {
-    height: 22px;
-    align-self: center;
+  &--more {
+    max-height: 17px;
+    margin-left: auto;
   }
-}
-
-.feed__header--wrapper {
-  display: flex;
-  align-items: center;
-  padding: 0 1em;
-}
-
-.feed__header--title {
-  color: $white;
-}
-
-.feed__header--more {
-  max-height: 17px;
-  margin-left: auto;
 }
 
 .feed {
   padding: 1em;
-}
 
-.feed__item {
-  background-color: $white;
-  margin-bottom: 1.5em;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  border-radius: $border-radius!important;
+  &__item {
+    background-color: $white;
+    margin-bottom: 1.5em;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    border-radius: $border-radius!important;
 
-  &:last-of-type {
-    margin-bottom: 0;
+    &:last-of-type {margin-bottom: 0;}
+
+    h1, h2, h3, h4, h5, h6 {color: $black;}
+
+    &--facebook {
+      background-color: $white;
+
+      .fb-post {
+        margin-top: -1px;
+        margin-left: -1px;
+        width: calc(100% + 1px) !important;
+      }
+
+      .fb_iframe_widget_fluid span {
+        width: 100% !important;
+      }
+
+      iframe {
+        width: 100% !important;
+      }
+    }
+
+    &--youtube {
+      position: relative;
+      height: 0;
+      height: 100%;
+      border-radius: $border-radius;
+      background-color: transparent;
+
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    color: $black;
-  }
-}
-
-.feed__item--facebook {
-  background-color: $white;
-
-  .fb-post {
-    margin-top: -1px;
-    margin-left: -1px;
-    width: calc(100% + 1px) !important;
+  &__ratio {
+    &--wrapper {
+      position: relative;
+	    padding-bottom: 56.25%;
+    }
   }
 
-  .fb_iframe_widget_fluid span {
-    width: 100% !important;
+  &__description {
+    overflow: auto;
+    padding: 0.8em;
+    background-color: $white;
   }
-
-  iframe {
-    width: 100% !important;
-  }
-}
-
-.feed__item--youtube {
-	position: relative;
-  height: 0;
-  height: 100%;
-  border-radius: $border-radius;
-  background-color: transparent;
   
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  &__avatar {
+    border-radius: $rounded;
+    height: 37px;
+    width: 37px;
+    float: left;
+    margin-right: 1em;
+  }
+  
+  &__name {
+    display: block;
+  }
+  
+  &__wrapper {
+    display: flex;
   }
 }
 
-.feed__ratio--wrapper {
-  position: relative;
-	padding-bottom: 56.25%;
-}
+.article {
+  &__logo {
+    max-height: 50px;
+    padding: 14px;
+    background-color: $white;
 
-.article__logo {
-  max-height: 50px;
-  padding: 14px;
-  background-color: $white;
-
-  &--image {
-    max-height: 22px;
+    &--image {
+      max-height: 22px;
+    }
   }
-}
 
-.article__title {
-  font-weight: 700;
-  font-size: 1.52rem;
-  margin-bottom: 1em;
-}
+  &__title {
+    font-weight: 700;
+    font-size: 1.52rem;
+    margin-bottom: 1em;
+  }
 
-.article__description {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  line-height: 1.5;
-}
- 
-.article__link {
-  margin-bottom: 0.5em;
-  display: block;
-}
+  &__description {
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    line-height: 1.5;
+  }
 
-.article__author {
-  display: block;
-  margin-bottom: 4px;
-  font-weight: 700;
-}
+  &__link {
+    margin-bottom: 0.5em;
+    display: block;
+  }
 
-.article__meta {
-  padding: 1em;
+  &__author {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 700;
+  }
 
-  small {
-    color: $black;
+  &__meta {
+    padding: 1em;
+
+    small {
+      color: $black;
+    }
   }
 }
 
@@ -441,7 +454,8 @@ small {
 
     &--main {
       height: 12px;
-      margin-left: 0.5em;
+      margin-left: auto;
+      padding-left: 0.5em;
     }
   }
 
@@ -475,28 +489,6 @@ small {
   }
 }
 
-.feed__description {
-  overflow: auto;
-  padding: 0.8em;
-  background-color: $white;
-}
-
-.feed__avatar {
-  border-radius: $rounded;
-  height: 37px;
-  width: 37px;
-  float: left;
-  margin-right: 1em;
-}
-
-.feed__name {
-  display: block;
-}
-
-.feed__wrapper {
-  display: flex;
-}
-
 .artists {
   margin-top: 1em;
   margin-bottom: 57px;
@@ -513,63 +505,61 @@ small {
     background: rgba(0, 0, 0, 0.4);
     border-radius: $border-radius;
   }
-}
 
-.artist__link {
-  display: flex;
-  align-items: center;
-  color: $white;
-
-  &:hover {
-    text-decoration: none;
+  &__link {
+    display: flex;
+    align-items: center;
+    color: $white;
+  
+    &:hover {
+      text-decoration: none;
+    }
   }
 
-}
+  &__image {
+    width: 64px;
+    height: 64px;
+    border-radius: $rounded;
+  }
 
-.artist__image {
-  width: 64px;
-  height: 64px;
-  border-radius: $rounded;
-}
-
-.artist__name {
-  margin-left: 0.5em;
+  &__name {
+    margin-left: 0.5em;
+  }
 }
 
 /********************************
   7. Template specifick
 *********************************/
 
-.template__home {
-  // background: $body-gradient;
-
-  main {
-    margin-top: -25px;
-  }
-}
-
-.template__search {
-  padding: 1em;
-
-  .header__title {
-    margin-top: 1em;
-    margin-bottom: 0.75em;
+.template {
+  &__home {
+    main {
+      margin-top: -25px;
+    }
   }
 
-  .spotify {
-    margin-left: -1em;
+  &__search {
+    padding: 1em;
+  
+    .header__title {
+      margin-top: 1em;
+      margin-bottom: 0.75em;
+    }
+  
+    .spotify {
+      margin-left: -1em;
+    }
   }
-}
-
-.template__artist {
-
-  main {
-    margin-top: 15px;
+  
+  &__artist {
+    main {
+      margin-top: 15px;
+    }
   }
 }
 
 /********************************
-  8. Override
+  8. Overrides
 *********************************/
 
 .instagram-media {
@@ -617,152 +607,158 @@ small {
   9. Carousel
 *********************************/
 
-.swiper-container {
-  width: 100%;
-  height: 420px;
-  color: $white;
-  margin-bottom: 30px;
-}
-
-.swiper-slide--first {
-  text-align: center;
-  display: flex;
-
-  .carousel__name {
-    margin-bottom: 28px;
+.swiper {
+  &-container {
+    width: 100%;
+    height: 420px;
+    color: $white;
+    margin-bottom: 30px;
   }
 
-  > .align-bottom {
-    margin-bottom: 60px;
-    width: calc(100% - 2em);
-    margin-left: 1em;
+  &-slide {
+    &--first {
+      text-align: center;
+      display: flex;
+    
+      .carousel__name {
+        margin-bottom: 28px;
+      }
+    
+      > .align-bottom {
+        margin-bottom: 60px;
+        width: calc(100% - 2em);
+        margin-left: 1em;
+      }
+    }
+  }
+
+  &-pagination-bullet {
+    background-color: $black-light;
+    opacity: 1;
+    width: 8px;
+    height: 8px;
+  }
+
+  &-pagination-bullet-active {
+    background-color: $white;
   }
 }
 
-.carousel__image--wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-}
+.carousel {
+  &__image {
+    width: 100%;
+    max-height: 350px;
+    object-fit: cover;
+    object-position: top;
 
-.carousel__image {
-  width: 100%;
-  max-height: 350px;
-  object-fit: cover;
-  object-position: top;
-}
+    &--wrapper {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+    }
+  }
 
-.carousel__gradient {
-  position:absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  height: 350px;
-  background: $carousel-gradient;
-}
+  &__gradient {
+    position:absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    height: 350px;
+    background: $carousel-gradient;
+  }
 
-.carousel__name {
-  position: relative;
-  z-index: 1;
-  font-size: 3.5em;
-  width: 100%;
-  font-weight: 500;
-}
+  &__name {
+    position: relative;
+    z-index: 1;
+    font-size: 3.5em;
+    width: 100%;
+    font-weight: 500;
+  }
 
-.carousel__button {
-  position: relative;
-  z-index: 1;
-  border-radius: 500px;
-  background: transparent;
-  border: 1px solid $gray;
-  color: $white;
-  padding: 0.3em 1em;
-  text-transform: uppercase;
-  margin-top: -10px;
-  cursor: pointer;
-  transition: 0.5s;
-
-  &--clicked {
-    background: $purple;
-    border: 1px solid $purple;
+  &__button {
+    position: relative;
+    z-index: 1;
+    border-radius: 500px;
+    background: transparent;
+    border: 1px solid $gray;
+    color: $white;
+    padding: 0.3em 1em;
+    text-transform: uppercase;
+    margin-top: -10px;
+    cursor: pointer;
     transition: 0.5s;
+  
+    &--clicked {
+      background: $purple;
+      border: 1px solid $purple;
+      transition: 0.5s;
+    }
   }
-}
 
-.swiper-pagination-bullet {
-  background-color: $black-light;
-  opacity: 1;
-  width: 8px;
-  height: 8px;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: $white;
-}
-
-.dark-slide {
-  background: rgba(23,23,23, 0.87);
-}
-
-.carousel__title {
-  text-align: center;
-  display: block;
-  font-size: 1.25em;
-  margin-top: 2em;
-}
-
-.carousel__track--wrapper {
-  padding: 2.5em 1em 2em 1em;
-}
-
-.carousel__track {
-  display: flex;
-  font-weight: 300;
-  margin-bottom: 1.35em;
-}
-
-.carousel__track--more {
-  height: 17px;
-  margin-left: auto;
-}
-
-.carousel__track--name {
-  white-space: nowrap; 
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  span {
-    opacity: 0.5;
-    margin-right: 1em;
+  
+  &__title {
+    text-align: center;
+    display: block;
+    font-size: 1.25em;
+    margin-top: 2em;
   }
-}
+  
+  &__track {
+    display: flex;
+    font-weight: 300;
+    margin-bottom: 1.35em;
 
-.carousel__track--button,
-.carousel__description--button {
-  text-transform: uppercase;
-  text-align: center;
-  display: block;
-  color: #848484;
-}
+    &--wrapper {
+      padding: 2.5em 1em 2em 1em;
+    }
 
-.carousel__description--button {
-  margin-top: 26px;
-}
+    &--more {
+      height: 17px;
+      margin-left: auto;
+    }
 
-.carousel__description {
-  color: $white;
-  padding: 2.5em 3.5em 0 3.5em;
-  text-align: center;
-  line-height: 1.4;
-  height: 238.97px;
-  position: relative;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
-  display: -webkit-box;
-  -webkit-line-clamp: 9;
+    &--name {
+      white-space: nowrap; 
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      span {
+        opacity: 0.5;
+        margin-right: 1em;
+      }
+    }
+
+    &--button {
+      text-transform: uppercase;
+      text-align: center;
+      display: block;
+      color: #848484;
+    }
+  }
+  
+  &__description {
+    color: $white;
+    padding: 2.5em 3.5em 0 3.5em;
+    text-align: center;
+    line-height: 1.4;
+    height: 238.97px;
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 9;
+
+    &--button {
+      text-transform: uppercase;
+      text-align: center;
+      display: block;
+      color: #848484;
+      margin-top: 26px;
+    }
+  }
 }
 
 /********************************
@@ -790,6 +786,9 @@ small {
   &__song {
     text-align: center;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
 
   &__artist {
@@ -831,4 +830,8 @@ small {
 
 .align-bottom {
   align-self: flex-end;
+}
+
+.dark-slide {
+  background: rgba(23,23,23, 0.87);
 }
