--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -17,15 +17,20 @@
     {{{body}}}
     {{#playback}}
     <div class="spotify">
+      {{#if item.name}}
       <img class="spotify__image" src="{{item.album.images.2.url}}" alt="{{item.name}}">
       <div class="spotify__song">
         <span class="spotify__artist">{{item.artists.0.name}}</span>
-        &#183;
         <span class="spotify__track">{{item.name}}</span>
       </div>
       <div class="spotify__remote">
         &#9654;
       </div>
+      {{else}}
+      <div class="spotify__song">
+        <span class="spotify__artist">Nothing is playing</span>
+      </div>
+      {{/if}}
     </div>
     {{/playback}}
     <footer class="navigation">
