--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,10 @@
-<header class="header"></header>
-
-<a href="/spotify/login" class="button button--spotify">Login to spotify</a>
+<div class="authentication">
+  <img class="authentication__logo" src="/images/linernote-logo.png" alt="Linernote logo">
+  <p class="authentication__description">Linernote brings Spotify, Youtube, articles and Social Media content from
+    artists together in one app, supplemented
+    by concert tickets.</p>
+  <a href="/spotify/login" class="button button--spotify">Login with spotify</a>
+  <small class="authentication__note">Note: you need a <a
+      href="https://www.spotify.com/nl/premium/?checkout=false">premium
+      account</a></small>
+</div>
