--- a/views/layouts/authentication.hbs
+++ b/views/layouts/authentication.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900">
   </head>
 
-  <body class="{{template}} container--center">
+  <body class="{{template}}">
     {{{body}}}
   </body>
 
