Polling of Spotify music player with Sockets

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -874,6 +874,10 @@ small {
           justify-content: center;
 }
 
+.spotify__id {
+  display: none;
+}
+
 /********************************
   11. Authentication
 *********************************/
