--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -22,6 +22,7 @@
       <div class="spotify__song">
         <span class="spotify__track">{{item.name}}</span>
         <span class="spotify__artist">{{item.artists.0.name}}</span>
+        <span class="spotify__id">{{item.id}}</span>
       </div>
       <div class="spotify__remote">
         &#9654;
