--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -812,6 +812,10 @@ small {
     align-items: center;
     justify-content: center;
   }
+
+  &__id {
+    display: none;
+  }
 }
 
 /********************************
