--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,6 +1,6 @@
 <h1 class="header__title">Search</h1>
 
-<input class="searchArtist" type="text" name="artist" placeholder="Search...">
+<input class="searchArtist" type="text" name="artist" placeholder="Artist">
 
 <ul class="artists"></ul>
 
