--- a/views/layouts/authentication.hbs
+++ b/views/layouts/authentication.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport">
     <title>Linernote</title>
     <meta name="description"
-      content="Linernote wil Spotify, Youtube en Social Media content van artiesten samenbrengen in één app, aangevuld door concertkaartjes">
+      content="Linernote brings Spotify, Youtube, articles and Social Media content from artists together in one app, supplemented by concert tickets.">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900">
