Fixed inconsistensies with Spotify Player

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -970,6 +970,10 @@ small {
   opacity: 1 !important;
 }
 
+.invisible {
+  display: none;
+}
+
 .inactive-message {
   position: fixed;
   bottom: 50px;
