--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -29,9 +29,14 @@
       </div>
       <span class="spotify__remote">{{#if is_playing}}❙❙{{else}}⏵{{/if}}</span>
       {{else}}
-      <div class="spotify__song">
-        <span class="spotify__artist">Spotify isn't playing</span>
+      <div class="spotify__refresh">
+        <div class="spotify__progress"></div>
+        <div class="spotify__song">
+          <span class="spotify__artist">Spotify isn't playing</span>
+          <span class="spotify__id">0</span>
+        </div>
       </div>
+      <span class="spotify__remote invisible">{{#if is_playing}}❙❙{{else}}⏵{{/if}}</span>
       {{/if}}
     </div>
     {{/playback}}
